# PenPlotter

./: .gitignore  CMakeLists.txt  EdgeDetection.py  README.md  main.cpp  main.py  output.gcode  requirements.txt
Python/: EdgeDetection.py  GCodeGenerator.py  RasterToVector.py
